# ssuljaengi

./: .coverage  .env.example  .gitignore  BUGFIX_SUMMARY_2026-01-02.md  PR_TICKET_026.md  README.md  WORKLOG.md  debug_log.txt  prompt_preview.md  pyproject.toml  test_visual_gen.py  verify_path.py
agent/: AGENTS.md  rule.md  ticket_template.md  workflow.md
assets/sfx/: CREDITS.md  README.md
config/: comment_templates.yaml
docs/: ARCHITECTURE.md  AUDIT_AND_LEARNINGS.md  DESIGN_3_AGENT_WORKFLOW.md  GOOGLE_TTS.md  GOOGLE_TTS_FLEXIBLE_STYLE.md  GOOGLE_TTS_MULTI_SPEAKER.md  IMAGE_GENERATION.md  IMPLEMENTATION_REVIEW.md  MANUAL_WORKFLOW.md  VIDEO_SYNC_FIX.md  WEBTOON_ENGINE.md  v0.0.2_EPIC_GOAL.md
docs/brainstorming/: script_fidelity_improvement.md
docs/notes/: google_tts.md
scripts/: check_remux.py  manual_reassemble.py  preview_prompts.py  test_gemini_api.py  test_sfx_overlay.py
scripts/dev_tools/: list_models_script.py
src/gossiptoon/: main.py
tests/: conftest.py  repro_broken_video.py  test_comments.py  verify_video_freeze_fix.py
tests/integration/: test_agent_flow.py  test_pipeline.py  test_webtoon_e2e.py
tests/manual/: test_audio_simple.py  test_gen_content.py  test_google_genai.py  test_model_version.py  test_models_specific.py  test_safety.py  test_safety_structured.py  test_schema.py  test_schema_warning.py  test_script_writer_refactor.py  test_visual_fallback.py  test_visual_simple.py
tests/unit/: test_3_agent_workflow.py  test_audio.py  test_audio_gender_logic.py  test_character_standardization.py  test_metadata_generator.py  test_models.py  test_pacing_optimization.py  test_panel_layout.py  test_script_evaluator.py  test_script_writer_webtoon.py  test_sfx_implementation.py  test_story_finder.py  test_text_analyzer.py  test_vfx_implementation.py  test_video.py  test_video_duration_fix.py  test_visual.py  test_visual_detailer.py
tickets/done/: PR_TICKET_027.md  PR_TICKET_028.md  PR_TICKET_036.md  PR_TICKET_037_038.md  TICKET-001-fix-video-effects.md  TICKET-001-fix-video-pipeline.md  TICKET-002-fix-video-freeze.md.bak  TICKET-003-debug-broken-video.md.bak  TICKET-005-fix-av-sync.md  TICKET-006-refine-visual-prompts.md  TICKET-007-extreme-dramatic-hook.md  TICKET-008-rapid-word-subtitles.md  TICKET-009-fix-av-sync-drift.md  TICKET-010-hybrid-subtitle-logic.md  TICKET-011-visual-sfx.md  TICKET-014-pipeline-sfx-integration.md  TICKET-015-sfx-volume-tuning.md  TICKET-021-pipeline-stabilization.md  TICKET-023-script-validation-agent.md  TICKET-024-code_clean_up.md  TICKET-024-fix-auth-timeout.md  TICKET-028-standardize-character-sheets.md  TICKET-030-enhance-narrative-dramatization.md  TICKET-032-reddit-source-attribution.md  TICKET-037-voice-gender-fix.md  TICKET-038-visual-enhancement.md
tickets/todo/: TICKET-004-fix-persistent-corruption.md  TICKET-011-visual-sfx.md  TICKET-012-audio-sfx-library.md  TICKET-013-audio-sfx-mixing.md  TICKET-016-engagement-writer.md  TICKET-017-engagement-overlay.md  TICKET-018-reddit-auto-crawler.md  TICKET-019-batch-processing.md  TICKET-020-fix-subtitle-embedding.md  TICKET-021-schema-validation.md  TICKET-022-youtube-metadata-generator.md  TICKET-023-youtube-auto-upload.md  TICKET-025-fix-missing-sfx.md  TICKET-026-optimize-image-duration.md  TICKET-027-refine-diversify-vfx.md  TICKET-029-webtoon-panel-layouts.md  TICKET-031-high-impact-text-overlay.md  TICKET-035-font-update.md  (+6 more)
(+55 files in other folders)
